--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,10 @@
   </head>
   <body>
     <main class="Main" id="main">
-      <header class="Header" id="header">
-        <section id="content">
-          <div class="loading"></div>
-        </section>
-      </header>
+      <header class="Header" id="header"></header>
+      <section id="content">
+        <div class="loading"></div>
+      </section>
     </main>
   </body>
 </html>
